# chaos

./: .gitignore  AGENTS.md  BUSINESS_MODEL.md  CLAUDE.md  COMPETITIVE_LANDSCAPE.md  LAUNCH_PLAN.md  LICENSE  MVP_WEEKEND.md  NEXT_SESSION_PROMPT.md  OVERVIEW.md  PRD.md  PROTOCOL.md  README.md  SECURITY.md  VERTICALS.md  hermes_integration_notes.md  how-discovery-works.html  how-pow-works.html  injection_defense_layers.html  pyproject.toml  why-nostr-not-libp2p.html
agent/: README.md  pyproject.toml
agent/src/chaos_agent/: __init__.py  attestation.py  catalog.py  config.py  evaluator.py  filters.py  grant_policy.py  identity.py  inbox.py  input_safety.py  inquiry.py  inquiry_listener.py  main.py  mcp_client.py  mcp_server.py  negotiation.py  publish.py  schemas.py  subscribe.py  tools_inquire.py  tools_negotiate.py  tools_publish.py  tools_subscribe.py
agent/tests/: test_evaluator.py  test_filters.py  test_grant_policy.py  test_inbox.py  test_inquiry.py  test_mcp_client.py  test_mcp_server.py  test_negotiation.py  test_publish.py  test_subscribe.py
buyer/: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
buyer/src/chaos_buyer/: __init__.py  attestation.py  config.py  evaluator.py  filters.py  identity.py  inbox.py  input_safety.py  inquiry.py  main.py  mcp_client.py  negotiation.py  schemas.py  subscribe.py  tools_inquire.py  tools_negotiate.py  tools_subscribe.py
buyer/tests/: test_evaluator.py  test_filters.py  test_inbox.py  test_inquiry.py  test_mcp_client.py  test_negotiation.py  test_subscribe.py
cars-pack/: README.md  example_listing.json  tag_schema.md
cars-pack/mcp/: reverse-image-mcp.md  vin-decoder-mcp.md
cars-pack/skills/buyer-cars/: SKILL.md
cars-pack/skills/seller-cars/: SKILL.md
mvp/: README.md  SMOKE_TEST.md  agent_offering.py  agent_seeking.py  buyer.py  mcp_client.py  mcp_server.py  requirements.txt  sample_car.toml  sample_inspection.txt  seller.py  shared.py
mvp/listings/: README.md
mvp/sample_photos/: README.md
operator/cars/: README.md  backup.md  badge_issuance.md  caddyfile  moderation_policy.md  strfry-compose.local.yml  strfry-compose.yml  strfry-config.toml  verify_relay.py  writePolicy.js
operator/cars/admin-agent/: README.md  pubkey.json  trust_list_announcement.md
operator/cars/admin-agent/escalation_queue/: README.md
operator/cars/admin-agent/retention/: README.md  rotate.sh.example
pitch/: README.md  chaos-deck.html  chaos-hermes-short.html
plugins/: README.md
plugins/_template/: README.md  plugin.yaml  pyproject.toml
plugins/_template/src/chaos_vertical_role/: register.py
plugins/cars/: README.md  plugin.yaml  pyproject.toml
plugins/cars-admin/: README.md  plugin.yaml  pyproject.toml
plugins/cars-admin/src/chaos_cars_admin/: register.py
plugins/cars-buyer/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/cars-buyer/src/chaos_cars_buyer/: __init__.py  register.py
plugins/cars-seller/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/cars-seller/src/chaos_cars_seller/: __init__.py  register.py
plugins/cars/src/chaos_cars/: __init__.py  register.py
plugins/chaos-pro/: README.md  plugin.yaml  pyproject.toml
plugins/chaos-pro/src/chaos_pro/: register.py
registry/: README.md  caddyfile  moderation_policy.md  monitoring.md  strfry-config.toml  writePolicy.js
reputation/: README.md  STAKE.md  admin_threat_model.md  attestation_schema.md  dispute_protocol.md  kinds.md  operator_revocation.md  scoring.md
seller/: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
seller/src/chaos_seller/: __init__.py  attestation.py  catalog.py  config.py  grant_policy.py  identity.py  input_safety.py  inquiry_listener.py  main.py  mcp_server.py  negotiation.py  publish.py  schemas.py  tools_inquire.py  tools_negotiate.py  tools_publish.py
seller/tests/: test_grant_policy.py  test_mcp_server.py  test_publish.py
shared-mcp/: README.md
shared-mcp/_template/: README.md  manifest.yaml  pyproject.toml
shared-mcp/_template/src/template_mcp/: server.py
shared-mcp/_template/tests/: test_server.py
shared-mcp/market-comp-mcp/: README.md  manifest.yaml  pyproject.toml
shared-mcp/market-comp-mcp/src/market_comp_mcp/: server.py
shared-mcp/market-comp-mcp/tests/: test_server.py
shared-mcp/reputation-mcp/: README.md  manifest.yaml  pyproject.toml
shared-mcp/reputation-mcp/src/reputation_mcp/: __init__.py  relay_client.py  scoring.py  server.py
shared-mcp/reputation-mcp/tests/: test_server.py
shared-mcp/reverse-image-mcp/: README.md  manifest.yaml  pyproject.toml
shared-mcp/reverse-image-mcp/src/reverse_image_mcp/: server.py
shared-mcp/reverse-image-mcp/tests/: test_server.py
spike/: A2A_SPIKE_REPORT.md  MCP_SPIKE_REPORT.md  README.md  buyer_a2a.py  buyer_acp.py  buyer_mcp.py  seller_a2a.py  seller_acp.py  seller_mcp.py
spike/received/: received_report.txt
spike/received_mcp/: alice_report.txt  bob_report.txt
verticals/: README.md
verticals/_template/: README.md  example_listing.json  tag_schema.md
verticals/_template/mcp/: README.md
verticals/_template/skills/<vertical>-buyer/: SKILL.md
verticals/_template/skills/<vertical>-offering/: SKILL.md
verticals/_template/skills/<vertical>-seeking/: SKILL.md
verticals/_template/skills/<vertical>-seller/: SKILL.md
verticals/cars-pack/: README.md  example_listing.json  tag_schema.md
verticals/cars-pack/mcp/vin-decoder-mcp/: README.md  manifest.yaml  pyproject.toml
verticals/cars-pack/mcp/vin-decoder-mcp/src/vin_decoder_mcp/: server.py
verticals/cars-pack/mcp/vin-decoder-mcp/tests/: test_server.py
verticals/cars-pack/skills/admin-cars/: SKILL.md
verticals/cars-pack/skills/buyer-cars/: SKILL.md
verticals/cars-pack/skills/offering-cars/: SKILL.md
verticals/cars-pack/skills/seeking-cars/: SKILL.md
verticals/cars-pack/skills/seller-cars/: SKILL.md
verticals/compute-jobs-pack/: README.md  STATUS.md
verticals/data-licensing-pack/: README.md  STATUS.md
verticals/ml-inference-pack/: README.md  STATUS.md
verticals/specialist-services-pack/: README.md  STATUS.md
