[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-buyer"
version = "0.1.0"
description = "Buyer agent for the chaos Nostr-based marketplace (MCP HTTP+SSE client to the seller's MCP server)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "chaos contributors" }]
license = { text = "MIT" }
dependencies = [
  "pynostr>=0.6.2,<0.7",
  "mcp==1.27.0",
  "httpx>=0.28.0,<1",
  "pydantic>=2.0,<3",
  "pyyaml>=6.0,<7",
  "coincurve>=20.0,<21",
  "cryptography>=41.0,<43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[project.entry-points."hermes.plugin"]
chaos_buyer = "chaos_buyer:register"

[project.scripts]
chaos-buyer = "chaos_buyer.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
