[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_buyer"]
[project]
name = "chaos-buyer"
version = "0.1.0"
description = "Buyer agent for the chaos Nostr + MCP protocol"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "chaos contributors" }]
license = { text = "MIT" }
dependencies = [
  "pynostr>=0.6.2,<0.7",
  "mcp>=1.27,<2",
  "httpx>=0.28.0,<1",
  "pyyaml>=6.0,<7",
  "coincurve>=21.0,<22",            # cp313 wheels start at 21.0
  "cryptography>=43.0,<46",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[project.entry-points."hermes.plugin"]
chaos_buyer = "chaos_buyer:register"

[project.scripts]
chaos-buyer = "chaos_buyer.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
