[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-spati-seller"
version = "0.1.0"
description = "Seller agent for the neuro-spati Nostr-based marketplace"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "neuro-spati contributors" }]
license = { text = "MIT" }
dependencies = [
  "pynostr>=0.6.2,<0.7",
  "httpx>=0.28.0,<1",
  "pydantic>=2.0,<3",
  "pyyaml>=6.0,<7",
  "coincurve>=20.0,<21",            # Schnorr / BIP-340 sigs
  "cryptography>=41.0,<43",         # NIP-44 (XChaCha20-Poly1305 + ECDH)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[project.entry-points."hermes.plugin"]
neuro_spati_seller = "neuro_spati_seller:register"

[project.scripts]
neuro-spati-seller = "neuro_spati_seller.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
