[project]
name = "chaos-vertical-role"
version = "0.1.0"
description = "Copy-and-fill skeleton for a chaos role-vertical plugin."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
