[project]
name = "chaos-vertical-role"
version = "0.1.0"
description = "Copy-and-fill skeleton for a chaos role-vertical plugin."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_vertical_role"]
