[project]
name = "chaos-cars-admin"
version = "0.1.0"
description = "Operator-deployed admin agent for the cars vertical."
requires-python = ">=3.11"
dependencies = [
  "chaos-admin-engine>=0.1",
  "reputation-mcp>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
