[project]
name = "chaos-cars-admin"
version = "0.1.0"
description = "Operator-deployed admin agent for cars-pack@1."
requires-python = ">=3.12"
dependencies = [
  # The admin engine package is being authored in parallel (see
  # plugin.yaml). Restore the workspace dep below once it ships 0.1:
  #   "chaos-admin-engine>=0.1",
  "reputation-mcp>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_cars_admin"]
