[project]
name = "chaos-cars-buyer"
version = "1.0.0"
description = "Find and evaluate cars over the chaos Nostr+MCP protocol (free tier, Hermes plugin)."
requires-python = ">=3.12"
authors = [{ name = "chaos contributors" }]
license = { text = "MIT" }

dependencies = [
  "pynostr>=0.6.2,<0.7",
  "mcp>=1.27,<2",
  "pyyaml>=6.0,<7",
  # Once buyer/ is implemented, switch to:
  #   "chaos-buyer>=0.1",
  # Capability MCPs listed in plugin.yaml are not pip deps — they're
  # MCP servers the user installs separately (or that ship via
  # chaos-pro).
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "ruff>=0.4,<1"]

[project.entry-points."hermes_agent.plugins"]
cars-buyer = "chaos_cars_buyer:register"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_cars_buyer"]
