[project]
name = "chaos-pro"
version = "0.1.0"
description = "Cross-vertical paid upgrade for chaos buyer plugins."
requires-python = ">=3.11"
dependencies = [
  "reverse-image-mcp>=0.1",
  "market-comp-mcp>=0.1",
  "reputation-mcp>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
