[project]
name = "chaos-pro"
version = "0.1.0"
description = "Cross-vertical paid upgrade for chaos buyer plugins."
requires-python = ">=3.12"
dependencies = [
  "reverse-image-mcp>=0.1",
  "market-comp-mcp>=0.1",
  "reputation-mcp>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_pro"]
