[project]
name = "template-mcp"
version = "0.1.0"
description = "Copy-and-fill scaffold for a chaos shared capability MCP."
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
