[project]
name = "template-mcp"
version = "0.1.0"
description = "Copy-and-fill scaffold for a chaos shared capability MCP."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.27,<2",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_mcp"]
