[project]
name = "market-comp-mcp"
version = "0.1.0"
description = "Pricing comparables MCP. Computes from NIP-99 listings already on configured Nostr relays. Universal across verticals."
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
