[project]
name = "market-comp-mcp"
version = "0.1.0"
description = "Pricing comparables MCP. Computes from NIP-99 listings already on configured Nostr relays. Universal across verticals."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.27,<2",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_comp_mcp"]
