[project]
name = "reputation-mcp"
version = "0.2.0"
description = "Layered trust-signal aggregation MCP. Universal across verticals. Reads only; never custodies."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.27,<2",
  "fastmcp",
  "pynostr>=0.6.2,<0.7",
  "certifi",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reputation_mcp"]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
