[project]
name = "reverse-image-mcp"
version = "0.1.0"
description = "Perceptual-hash photo fraud detection MCP. Universal across verticals. Local-only; no third-party reverse-image services."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.27,<2",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reverse_image_mcp"]
