[project]
name = "vin-decoder-mcp"
version = "0.1.0"
description = "ISO-3779 structural VIN decoder MCP. Cars-specific. Local-only; no third-party vehicle history data."
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
