[project]
name = "vin-decoder-mcp"
version = "0.1.0"
description = "ISO-3779 structural VIN decoder MCP. Cars-specific. Local-only; no third-party vehicle history data."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.27,<2",
  "fastmcp",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vin_decoder_mcp"]
